--- a/README
+++ b/README
@@ -4,7 +4,10 @@ Visit-Logger
 DESCRIPTION
 An opensimulator (http://www.opensimulator.org) region module to log visitors and notify the sim owner of visits.
 
-NOTES
+BUILD NOTES
 This module uses several libraries that I have not included.  The expectation is that the Visit-Logger/ folder will be placed in the bin/ folder of your OpenSimulator installation.  This will provide access to all required libraries except one.  The Twitterizer library (Twitterizer.FrameWork.dll) must be downloaded separately and placed in the bin/ folder of your OpenSimulator installation. http://twitterizer.googlecode.com/files/Twitterizer.Framework-1.0.1.120.zip
 
 (I think the licenses of OpenSimulator and Twitterizer would allow me to redistribute those libraries along with this module, but I'm new to opensource and do not want to risk doing it incorrectly.)
+
+USAGE NOTES
+This module uses a Twitter account to log visitors and suggestions.  Do not use your normal Twitter account with this module - all of your followers will be spammed with Tweets everytime you have a visitor.  Set up a new account for this module and then follow the new account with your normal account.  
