--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
 vMeadowGA
 
 DESCRIPTION
-An Google AppEngine app to generate starting communities for the vMeadow Opensimulator region module.
+A Google AppEngine app to generate starting communities for the vMeadow Opensimulator region module.
 
 BUILD NOTES
 
