--- a/README
+++ b/README
@@ -2,21 +2,18 @@ NAME
 Visit-Logger
 
 DESCRIPTION
-An OpenSimulator (http://www.opensimulator.org) region module to log visitors and notify the sim owner of visits.
+An OpenSimulator (http://www.opensimulator.org) region module to log visitors.
 
 BUILD NOTES
-This module uses several libraries that I have not included.  The expectation is that the Visit-Logger/ folder will be placed in the addon-modules/ folder of your OpenSimulator installation.  This will provide access to all required libraries except one.  The Twitterizer library (Twitterizer.FrameWork.dll) must be downloaded separately and placed in the bin/ folder of your OpenSimulator installation. http://twitterizer.googlecode.com/files/Twitterizer.Framework-1.0.1.120.zip
+This module uses several libraries that I have not included.  The expectation is that the Visit-Logger/ folder will be placed in the addon-modules/ folder of your OpenSimulator installation.  This will provide access to all required libraries
 
 USAGE NOTES
-This module uses a Twitter account to log visitors and suggestions.  Do not use your normal Twitter account with this module - all of your followers will be spammed with Tweets everytime you have a visitor.  Set up a new account for this module and then follow the new account with your normal account.
+This module logs visitors to your choice of a local file or an online logging tool (such as the visitloggerga tool at visitlog.aduffy70.org).
+To use local logging, you specify a local folder in  the VisitLogger.ini file.  The log will be stored in the specified folder as VisitLog.csv
+To use the online tool, this module needs a google account ID (a gmail address, for example) to associate with the records.  It does NOT need any login info such as your password. To view the log records, direct your browser to the logging tool url (visitlog.aduffy70.org).  You will be redirected to Google's Authorization page to login and will then be able to see the records associated with your google account (this prevents anyone else from accessing your log records).
 
 TODO
 In no particular order...
-Add the option to log to a file.
-Add the code for emailed notifications back in and make the choice of logging/notification methods a configurable option.
-Provide tools to summarize visit data.
-Document limitations (how many calls to the Twitter API are allowed in 24 hours?  Is the post length really limited to 140 characters?)
 Document installation, configuration, and use.
-Pull necessary 3rd party libraries into the project (in a way that is appropriate for their individual licenses).
 Test module on opensim instances with multiple regions per instance and make necessary changes (All my test regions are a single region per opensim instance).
 
