Updated README to include the new chat commands and to delete the 'todo' items that are done or obsolete.

--- a/README
+++ b/README
@@ -8,14 +8,10 @@ BUILD NOTES
 This module uses several libraries that I have not included.  The expectation is that the Sierpinski-Tree/ folder will be placed in the addon-modules/ folder of your OpenSimulator installation.  This will provide access to all required libraries.
 
 USAGE NOTES
-This module uses a Sierpinski pyramid.  The module initially creates a single large prim. Chatting '/11 step' will replace that prim with 5 smaller prims, starting the pyramid.  Each time you chat the command, every prim will be replaced by 5 new prims, increasing the complexity of the pyramid.  Eventually you may exceed the limitations of your server hardware, OpenSimulator or your client software.  I don't know what will happen if you exceed those limits... 
+This module uses a Sierpinski pyramid.  Chat '/11 show' to start a new pyramid with a single rectangular prim.  Chatting '/11 step' will replace that prim with 5 smaller prims, starting the pyramid.  Each time you chat the command, every prim will be replaced by 5 new prims, increasing the complexity of the pyramid.  Eventually you may exceed the limitations of your server hardware, OpenSimulator or your client software.  Chat '/11 hide' to delete the pyramid and start over. 
 
 TODO
 In no particular order...
-Add a command to freeze the pyramid so it cannot be advanced further.
-Add commands to delete or restart the pyramid.
 Make the individual prims pyramid-shaped instead of rectangular.
-Randomize the color of each prim rather than each block of 5 prims.
 Document installation, configuration, and use.
-Pull necessary 3rd party libraries into the project (in a way that is appropriate for their individual licenses).
 Test module on opensim instances with multiple regions per instance and make necessary changes (All my test regions are a single region per opensim instance).
